--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 
 .navbar {
    background-color: #2C3E50 !important;
-   
 }
 .jumbotron {
    margin-bottom: 0px;
@@ -10,13 +9,12 @@
 }
 .portfolio {
    background-color: orange;
-   padding: 100px;
+   padding: 5%;
 }
 .portfolio img {
    border-radius: 4%;
    width: 100%;
    height: 100%;
-
 }
 .contactame {
     background-color: orange;
